03-10-2009 Giansimon Diblas: Redesigned signin module.
git-svn-id: file:///home/wik/repos/w3srepo/sfW3studioCmsPlugin/1.2/trunk@70 c6a47aa4-7d28-49a2-9282-aebedf263cad

--- a/web/css/themes/w3studioCmsSkin/w3s_image_editor.css
+++ b/web/css/themes/w3studioCmsSkin/w3s_image_editor.css
@@ -12,12 +12,19 @@
 /* ------------------------------------ *
     Page elements
  * ------------------------------------ */
-#w3s_image_editor{
+#w3s_image_editor
+{
   background-color:#EEE;
   border-top:1px solid #CCC;
   border-left:1px solid #CCC;
   border-right:1px solid #999;
   border-bottom:1px solid #999;
+  font: 10px Arial, Verdana, Helvetica, sans-serif;
+}
+
+#w3s_image_editor a
+{
+  font: 10px Arial, Verdana, Helvetica, sans-serif;
 }
 
 #w3s_image_editor table{
