--- a/web/css/themes/w3studioCmsSkin/w3s_properties.css
+++ b/web/css/themes/w3studioCmsSkin/w3s_properties.css
@@ -9,7 +9,8 @@
  * file that was distributed with this source code.
  */
 
- #w3s_properties{
+ #w3s_properties
+ {
    background-color: #FFF;
    border: 1px solid #666;
  }
