--- a/web/css/themes/w3studioCmsSkin/w3s_signin.css
+++ b/web/css/themes/w3studioCmsSkin/w3s_signin.css
@@ -1,4 +1,3 @@
-<?php
 /*
  * This file is part of the w3studioCMS package library and it is distributed 
  * under the LGPL LICENSE Version 2.1. To use this library you must leave 
@@ -8,10 +7,11 @@
  *  
  * For the full copyright and license information, please view the LICENSE
  * file that was distributed with this source code.
- *
- * For extra documentation and help please visit http://www.w3studiocms.com
  */
 
-  use_helper('I18N', 'Javascript', 'Object');
+#w3s_signin table td
+{
+  padding:4px 0;
+}
   
-  echo $groupEditor->render();
+
