03-30-2009 Giansimon Diblas: Module slot associations.
git-svn-id: file:///home/wik/repos/w3srepo/sfW3studioCmsPlugin/1.2/branches/sfW3studioCmsPlugin_0.9.0@83 c6a47aa4-7d28-49a2-9282-aebedf263cad

--- a/web/css/themes/w3studioCmsSkin/w3s_groups.css
+++ b/web/css/themes/w3studioCmsSkin/w3s_groups.css
@@ -13,18 +13,29 @@
     Page elements
  * ------------------------------------ */
  
-#w3s_add_group_module{
+#w3s_add_group_module
+{
 	font: 10px Verdana, Arial, Helvetica, sans-serif;
 	text-align:left;
 	padding:4px;
 } 
  
-#w3s_add_group_module table td{
+#w3s_add_group_module table td
+{
   font: 10px Verdana, Arial, Helvetica, sans-serif !important;
 }
 
-#w3s_add_group_module table td input, #w3s_add_group_module table td select{
+#w3s_add_group_module table td input, #w3s_add_group_module table td select
+{
   font: 10px Verdana, Arial, Helvetica, sans-serif !important;
   border:1px solid #aaa !important;
+}
+
+#w3s_add_group_module .w3s_slot_link
+{
+	font: bold 10px Verdana, Arial, Helvetica, sans-serif;
+	text-align:left;
+  color: #C20000;
+  text-decoration:none;
 }
 
